# geometric-flip-schelling-experiments

./: .gitignore  LICENSE  README.md  experiments.py  launch.json
code/: CMakeLists.txt
code/include/: er.hpp  graph.hpp  ipe.hpp  rgg.hpp  visualization.hpp  voting.hpp
code/source/: er.cpp  graph.cpp  ipe.cpp  rgg.cpp  run.cpp  visualization.cpp  voting.cpp
eval/: .gitignore  conv_avg_deg.R  crit-avg-deg.R  crit_avg_deg.R  extended.R  general.R  intro-plot.R  measurements.csv  measurements_1k.csv  plot.R  tests.R  theme.R  visualization.R
eval/data/: intro.csv  visualization.csv
eval/tex/: .gitignore  crit-avg-deg.tex  crit_avg_deg.tex  extended-plot-color-changes.tex  extended-plot-minority-size.tex  extended-plot-monochrome-edges.tex  extended-plot.tex  intro-plot.tex  master.tex  plot.tex  visualization-plot.tex
